<resources>
    <string name="app_name">Burning-Series</string>
    <string name="font_path" translatable="false">fonts/OpenSans-Regular.ttf</string>
    <string name="font_path_medium" translatable="false">fonts/OpenSans-Medium.ttf</string>
    <string name="font_path_bold" translatable="false">fonts/OpenSans-Bold.ttf</string>

    <string name="aboutLibraries_showLicense" translatable="false">true</string>
    <string name="aboutLibraries_description_showIcon" translatable="false">true</string>
    <string name="aboutLibraries_description_showVersionName" translatable="false">true</string>
    <string name="aboutLibraries_description_showVersionCode" translatable="false">false</string>
    <string name="aboutLibraries_description_text">Watch numerous series online for free on Burning Series!</string>

    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="all_series">All Series</string>
    <string name="latest_episodes">Latest Episodes</string>
    <string name="latest_series">Latest Series</string>
    <string name="more">More…</string>
    <string name="less">Less…</string>
    <string name="help_improve_header">Help Improve</string>
    <string name="help_improve_text">In order for the app to work properly, it depends on YOUR help. Videos cannot always be viewed directly because of the captcha. If a video is not available, please start it on the website (the app will automatically ask you for it). As soon as you have started it, it should also be available directly in the app.\nCurrently available videos: %d</string>
    <string name="i_understand">I understand</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="continue_string">Continue</string>
    <string name="save_success">Saving succeeded!</string>
    <string name="save_failed">Saving failed!</string>
    <string name="scraped_save_success">Successfully saved the Hoster. You can go back now or continue browsing and activate some more hoster :)</string>
    <string name="scraped_save_failed">Hoster could not be saved.\\nMaybe it\\\'s already saved, try another hoster or go back.</string>
    <string name="activate">Activate</string>
    <string name="browser">Browser</string>
    <string name="stream_unavailable">Stream Unavailable</string>
    <string name="stream_unavailable_text">This Video can\'t be streamed. Did you check your network connection? You can go back an try another hoster, open the Video in browser or activate a hoster, so it can be streamed in the app.</string>
    <string name="no_stream_source">No Stream Source</string>
    <string name="no_stream_source_text">Apparently there is no Stream source available. You can try it again later or activate some hoster yourself. Please note that not all Hosters can be streamed from.</string>
    <string name="loading">Loading</string>
    <string name="error">Error. Try again later</string>
    <string name="success">Success</string>
    <string name="appearance">Appearance</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_subtitle">Toggle dark and light mode</string>
    <string name="display_improve_dialog">Display Improve Dialog</string>
    <string name="display_improve_dialog_subtitle">Shows improve dialog when launching the app</string>
    <string name="video">Video</string>
    <string name="advanced_fetching">Advanced Streaming Sources</string>
    <string name="advanced_fetching_subtitle">Maybe more and better results but increases loading time</string>
    <string name="prefer_mp4">Prefer MP4</string>
    <string name="prefer_mp4_subtitle">Usually m3u8 is used, could fix video issues on some devices</string>
    <string name="enable_preview">Enable Preview</string>
    <string name="enable_preview_subtitle">Disabling can improve video performance</string>
    <string name="language">Language</string>
    <string name="select_language">Select Language</string>
    <string name="select_season">Select Season</string>
    <string name="season_placeholder">Season %d</string>
    <string name="select_hoster">Select Hoster</string>
    <string name="watch">Watch</string>
    <string name="loading_text">Please be patient, data is being loaded…</string>
    <string name="error_loading">Error during loading</string>
    <string name="error_loading_text">An error occurred while loading %s.\nDid you check your network connection? Maybe it\'s blocked in your DNS.\nYou can retry it or go back if the error remains.</string>
    <string name="retry">Retry</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="open_in_browser_text">Do you want to open \"%s\" in a browser?</string>
    <string name="open">Open</string>
    <string name="of">of</string>
    <string name="new_release">New Release</string>
    <string name="new_release_text">Hey a new version is available you should check it out!\n\nVersion: \t\t\t\t%s\nInstalled: \t\t\t%s</string>
    <string name="view">View</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="opensource_libs">OpenSource Libraries</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="confirm">Confirm</string>
    <string name="default_fullscreen">Default Fullscreen</string>
    <string name="default_fullscreen_subtitle">Automatically switch to fullscreen mode when watching a video</string>
    <string name="sync_with_other_device">Sync with other device</string>
    <string name="searching_for_devices">Searching for devices</string>
    <string name="myanimelist" translatable="false">MyAnimeList</string>
    <string name="anilist" translatable="false">AniList</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="mal_login">MAL Login</string>
    <string name="mal_login_subtitle">Sync your progress with MyAnimeList</string>
    <string name="mal_images">Use MAL Images</string>
    <string name="mal_images_subtitle">Loads MyAnimeList Covers of series</string>
    <string name="anilist_login">AniList Login</string>
    <string name="anilist_login_subtitle">Sync your progress with AniList</string>
    <string name="anilist_images">Use AniList Images</string>
    <string name="anilist_images_subtitle">Loads AniList Covers of series</string>
    <string name="github_login">GitHub Login</string>
    <string name="github_login_subtitle">Associates your sponsor and contribution status with the app</string>
    <string name="burningseries_theme">BurningSeries Theme</string>
    <string name="burningseries_theme_subtitle">Use the BurningSeries accent color</string>
    <string name="close">Close</string>
    <string name="last_exception">Last Exception</string>
    <string name="copy">Copy</string>
    <string name="error_copy_tag">BurningSeries Error</string>
    <string name="start_episode">Start [Ep. %d]</string>
    <string name="continue_episode">Continue [Ep. %d]</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="copyright" translatable="false">Copyright © 2021-%d %s</string>
    <string name="about">About</string>
    <string name="donate">Donate</string>
    <string name="sponsor_header">Sponsor the Project</string>
    <string name="sponsor_text">Hey it looks like you like the app.\nYou can support me to keep the app running as the service is not free.\nEither you help with the programming or sponsor me for 1€ a month.\nAnother thing you can do to get rid of this message is activating videos and adding their timestamps.</string>
    <string name="error_internet_connecton">Please check your internet connection.</string>
    <string name="error_bad_request">Server received malformed data.</string>
    <string name="error_server_error">Server could not process data.</string>
    <string name="error_could_not_load">Could not load data.</string>
    <string name="activate_stream">Activate Stream</string>
    <string name="linked_series">Linked Series</string>

    <string name="check_stream">Check if stream is available…</string>
    <string name="loading_stream">Stream is loading…</string>
    <string name="no_stream">No Stream available</string>

    <string name="loading_series">Loading series information…</string>
    
    <string name="skip">Skip</string>
    <string name="skip_recap">Skip Recap</string>
    <string name="skip_intro">Skip Intro</string>
    <string name="skip_outro">Skip Outro</string>

    <string name="recap">Recap</string>
    <string name="intro">Intro</string>
    <string name="outro">Outro</string>

    <string name="done">Done</string>

    <string name="start_timestamp">Start Timestamp</string>
    <string name="end_timestamp">End Timestamp</string>

    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>

    <string name="edit_timestamps">Edit Timestamps</string>
    <string name="too_low">Too low</string>
    <string name="max_number">Max. Number: %d</string>

    <string name="statistics">Statistics</string>
    <string name="points_progress">Points Progress</string>
    <string name="points_description">After a while you will be asked if you would like to donate as support.\nTo stop getting this message, you either have to donate, work on the project, or collect a certain number of points.\n\nYou need a total of 500.\n\nYou collect points by activating videos or adding timestamps (recap, intro or outro).</string>
    <string name="points_hint">You can still watch your series even if you don\'t reach the points</string>
    <string name="points_out_of_500" translatable="false">%.1f/500</string>
</resources>