<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/home_github"
        android:icon="@drawable/ic_github"
        android:title="@string/github"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/home_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item android:id="@+id/home_stats"
        android:icon="@drawable/ic_baseline_pie_chart_24"
        android:title="@string/statistics"
        app:showAsAction="never" />
    <item android:id="@+id/home_about"
        android:icon="@drawable/ic_outline_info_24"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>