<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/pointsHeader"
            fontPath="@string/font_path_bold"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/points_progress"
            android:gravity="start|center_vertical"
            android:layout_margin="16dp"
            android:maxLines="1"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/pointsDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/points_description"
            android:gravity="start|center_vertical"
            android:layout_margin="16dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/pointsHeader"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/pointsHint"
            fontPath="@string/font_path_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/points_hint"
            android:gravity="start|center_vertical"
            android:layout_margin="16dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/pointsDescription"/>

        <com.db.williamchart.view.DonutChartView
            android:id="@+id/pointsChart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".5"
            app:layout_constraintTop_toBottomOf="@id/pointsHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="w,1:1"
            app:chart_donutBackgroundColor="@color/onBackgroundTransparentColor"
            app:chart_donutThickness="16dp"
            app:chart_donutRoundCorners="true"
            app:chart_donutTotal="500"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/pointsText"
            fontPath="@string/font_path_bold"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/points_out_of_500"
            android:gravity="center"
            android:layout_margin="16dp"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="@id/pointsChart"
            app:layout_constraintBottom_toBottomOf="@id/pointsChart"
            app:layout_constraintStart_toStartOf="@id/pointsChart"
            app:layout_constraintEnd_toEndOf="@id/pointsChart"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
