<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/draggedIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Dialog.Indicator"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/header"
        fontPath="fonts/Poppins-Bold.ttf"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:textColor="@color/defaultContentColor"
        android:layout_margin="16dp"
        android:singleLine="true"
        android:maxLines="1"
        android:text="@string/new_release"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="18sp"
        app:autoSizeMaxTextSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/draggedIndicator"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/defaultContentColor"
        android:layout_margin="16dp"
        android:text="@string/new_release_text"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/view"
        android:textColor="@color/defaultBackgroundColor"
        app:backgroundTint="@color/defaultContentColor"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintEnd_toStartOf="@id/backButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/close"
        android:textColor="@color/defaultBackgroundColor"
        app:backgroundTint="@color/defaultContentColor"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>