<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/episodesHeader"
            fontPath="@string/font_path_bold"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/latest_episodes"
            android:gravity="start|center_vertical"
            android:layout_margin="16dp"
            android:maxLines="1"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ProgressBar
            android:id="@+id/episodeLoadingBar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:indeterminate="true"
            android:layout_marginStart="16dp"
            android:indeterminateOnly="true"
            android:indeterminateTint="@color/backgroundTextColor"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/episodesHeader"
            app:layout_constraintBottom_toBottomOf="@id/episodesHeader"
            app:layout_constraintStart_toEndOf="@id/episodesHeader" />

        <com.skydoves.androidveil.VeilRecyclerFrameView
            android:id="@+id/latestEpisodeRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:descendantFocusability="afterDescendants"
            android:animateLayoutChanges="false"
            app:layout_constraintTop_toBottomOf="@id/episodesHeader"
            app:veilFrame_layout="@layout/recycler_latest_episode"
            app:veilFrame_veiled="true"
            app:veilFrame_shimmerEnable="true"
            app:veilFrame_radius="0dp"
            app:veilFrame_baseColor="@color/shimmerBaseColor"
            app:veilFrame_highlightColor="@color/shimmerHighlightColor"
            app:veilFrame_dropOff="0.7"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/seriesHeader"
            fontPath="@string/font_path_bold"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/latest_series"
            android:gravity="start|center_vertical"
            android:layout_margin="16dp"
            android:maxLines="1"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@id/latestEpisodeRecycler"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/seriesLoadingBar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:indeterminate="true"
            android:layout_marginStart="16dp"
            android:indeterminateOnly="true"
            android:indeterminateTint="@color/backgroundTextColor"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/seriesHeader"
            app:layout_constraintBottom_toBottomOf="@id/seriesHeader"
            app:layout_constraintStart_toEndOf="@id/seriesHeader" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/allSeriesButton"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/more"
            app:layout_constraintTop_toBottomOf="@id/latestEpisodeRecycler"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.skydoves.androidveil.VeilRecyclerFrameView
            android:id="@+id/latestSeriesRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:animateLayoutChanges="false"
            app:layout_constraintTop_toBottomOf="@id/seriesHeader"
            app:veilFrame_layout="@layout/recycler_latest_series"
            app:veilFrame_veiled="true"
            app:veilFrame_shimmerEnable="true"
            app:veilFrame_radius="0dp"
            app:veilFrame_baseColor="@color/shimmerBaseColor"
            app:veilFrame_highlightColor="@color/shimmerHighlightColor"
            app:veilFrame_dropOff="0.7"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>