<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/timeEditRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:checkedButton="@id/throwbackButton"
            app:selectionRequired="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <Button
                android:id="@+id/throwbackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/throwback"
                style="?attr/materialButtonOutlinedStyle"
                />
            <Button
                android:id="@+id/introButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro"
                style="?attr/materialButtonOutlinedStyle"
                />
            <Button
                android:id="@+id/outroButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outro"
                style="?attr/materialButtonOutlinedStyle"
                />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/startText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/start_timestamp"
            app:layout_constraintTop_toBottomOf="@id/toggleButton"
            app:layout_constraintStart_toStartOf="@id/toggleButton"
            app:layout_constraintEnd_toEndOf="@id/toggleButton" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/startContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/toggleButton"
            app:layout_constraintTop_toBottomOf="@id/startText"
            app:layout_constraintEnd_toEndOf="@id/toggleButton"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/startHourTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:hint="@string/hour"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:maxLength="1"
                    android:imeOptions="actionDone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/startMinuteTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:hint="@string/minute"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:maxLength="2"
                    android:imeOptions="actionDone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/startSecondTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:hint="@string/second"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:maxLength="2"
                    android:imeOptions="actionDone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/startApply"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/ic_baseline_access_time_24"
                app:tint="?attr/colorOnPrimaryContainer"
                android:scaleType="centerInside"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/endText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/end_timestamp"
            app:layout_constraintTop_toBottomOf="@id/startContainer"
            app:layout_constraintStart_toStartOf="@id/toggleButton"
            app:layout_constraintEnd_toEndOf="@id/toggleButton" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/endContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/endText"
            app:layout_constraintStart_toStartOf="@id/toggleButton"
            app:layout_constraintEnd_toEndOf="@id/toggleButton"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/endHourTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:hint="@string/hour"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:maxLength="1"
                    android:imeOptions="actionDone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/endMinuteTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:hint="@string/minute"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:maxLength="2"
                    android:imeOptions="actionDone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/endSecondTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:hint="@string/second"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:inputType="number"
                    android:maxLength="2"
                    android:imeOptions="actionDone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/endApply"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginStart="8dp"
                app:tint="?attr/colorOnPrimaryContainer"
                app:srcCompat="@drawable/ic_baseline_access_time_24"
                android:scaleType="centerInside"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
